[gd_scene load_steps=6 format=3 uid="uid://cw5lavd7k4wxo"]

[ext_resource type="PackedScene" uid="uid://bfhu4ed6reguj" path="res://Scenes/Weapons/Rifle/Models/rifle.tscn" id="1_dvh2e"]
[ext_resource type="Script" path="res://Scenes/Weapons/Rifle/rifle.gd" id="1_ep60f"]
[ext_resource type="AudioStream" uid="uid://crjuub21i8gps" path="res://Scenes/Weapons/Rifle/Sounds/Rifle shot.wav" id="4_3esh7"]

[sub_resource type="Animation" id="Animation_gsef1"]
resource_name = "shoot"
length = 0.1
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:in_cooldown")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("OmniLight3D:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.03),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ShotSound")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0.0],
"method": &"play"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_f1qb2"]
_data = {
"shoot": SubResource("Animation_gsef1")
}

[node name="Rifle" type="Node3D"]
script = ExtResource("1_ep60f")

[node name="RifleModel" parent="." instance=ExtResource("1_dvh2e")]

[node name="ShotRay" type="RayCast3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0664715, -0.493289)
target_position = Vector3(0, 0, 200)
collision_mask = 194

[node name="TracerSource" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0615022, -0.469648)

[node name="ReloadTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 3.0
one_shot = true

[node name="ShotSound" type="AudioStreamPlayer3D" parent="."]
unique_name_in_owner = true
stream = ExtResource("4_3esh7")
max_polyphony = 10
bus = &"InWorldSound"

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0691789, -0.538395)
visible = false
light_color = Color(0.898039, 0.913725, 0.278431, 1)
omni_range = 10.0
omni_attenuation = 0.732043

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_f1qb2")
}

[connection signal="timeout" from="ReloadTimer" to="." method="_on_reload_timer_timeout"]
